# Dictionary-bot-telegram

./: README.MD  README.md  bot.py  dict.py  keep_alive.py  pyproject.toml  requirements.txt
