[tool.poetry]
name = "dictionary-bot-telegram"
version = "0.1.0"
description = "Its a dictionary bot for telegram.. Bot ID = @DictionaryyBot"
authors = ["Abhigyan Kaushik"]

[tool.poetry.dependencies]
python = "^3.8"
pydictionary = "^2.0.1"
pyTelegramBotAPI = "^3.7.6"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
